# mano

./: .gitignore  CMakeLists.txt  a
editor/: CMakeLists.txt  Editor.cpp  Editor.h  main.cpp
lib/ncpp/: CMakeLists.txt
lib/ncpp/include/ncpp/: Layout.h  Window.h  ncpp.h  ncurses_utilities.h
lib/ncpp/src/: Layout.cpp  Window.cpp  ncpp.cpp  ncurses_utilities.cpp
lib/text_buffer/: CMakeLists.txt
lib/text_buffer/include/text_buffer/: TextBuffer.h
lib/text_buffer/src/: TextBuffer.cpp  TextMetadata.cpp
src/: Cursor.h  Editor.cpp  Editor.h  Screen.cpp  Screen.h  TextBuffer.cpp  TextBuffer.h  TextMetadata.cpp  TextMetadata.h  main.cpp  ncurses_utilities.cpp  ncurses_utilities.h
